--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ Universal Mailer is open source software. This means that you can grab the entir
 
 <p>If you don't want to grab the source code and compile yourself the plugin, here is the latest version of it. There's also a link for the previous version, use whatever fits your needs.</p>
 
-<p><a href="#">Download version 1.5.2</a></p>
+<p><a href="zips/UniversalMailer-v1_5_2.zip">Download version 1.5.2</a></p>
 
-<p><a href="#">Download version 1.4</a></p>
+<p><a href="zips/UniversalMailer-v1_4.zip">Download version 1.4</a></p>
 
 <p>Copyright © 2013 by noware  </p>
       </section>
