--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+				<div id="project_logo" class='noshadow'><img class='noshadow' src='images/logo.png' alt='Universal Mailer logo'></img></div>
           <a id="forkme_banner" href="https://github.com/UniversalMailer/UniversalMailer">View on GitHub</a>
 
           <h1 id="project_title">Universal Mailer</h1>
