added paypal button

--- a/index.html
+++ b/index.html
@@ -50,16 +50,24 @@ Universal Mailer is open source software. This means that you can grab the entir
 
 <p>If you wish to contribute to the project you can either make patches/additions to the source code or make an open donation using this link:</p>
 
-<p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=5J2D75Z629L66">Donate</a></p>
+<p>
+<center>
+		<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+				<input type="hidden" name="cmd" value="_s-xclick">
+				<input type="hidden" name="hosted_button_id" value="8563T8FQ5H58C">
+				<input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal — The safer, easier way to pay online.">
+		</form>
+</center>
+</p>
 
 <h2>
 <a name="download" class="anchor" href="#download"><span class="octicon octicon-link"></span></a>Download</h2>
 
 <p>If you don't want to grab the source code and compile yourself the plugin, here is the latest version of it. There's also a link for the previous version, use whatever fits your needs.</p>
 
-<p><a href="zips/UniversalMailer-v1_5_2.zip">Download version 1.5.2</a></p>
+<p><center><a href="zips/UniversalMailer-v1_5_2.zip">Download version 1.5.2 (preferred for Mountain Lion)</a></center></p>
 
-<p><a href="zips/UniversalMailer-v1_4.zip">Download version 1.4</a></p>
+<p><center><a href="zips/UniversalMailer-v1_4.zip">Download version 1.4 (preferred for Lion and Snow Leopard)</a></center></p>
 
 <p>Copyright © 2013 by noware  </p>
       </section>
