--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-				<div id="project_logo" class='noshadow'><img class='noshadow' src='images/logo.png' alt='Universal Mailer logo'></img></div>
           <a id="forkme_banner" href="https://github.com/UniversalMailer/UniversalMailer">View on GitHub</a>
 
           <h1 id="project_title">Universal Mailer</h1>
           <h2 id="project_tagline">Universal Mailer, the missing plugin for Mail.app</h2>
 
         </header>
+				<section>
+				<div id="project_logo" class='noshadow'><img class='noshadow' src='images/logo.png' alt='Universal Mailer logo'></img></div>
+				</section>
     </div>
 
     <!-- MAIN CONTENT -->
@@ -52,7 +54,7 @@ Universal Mailer is open source software. This means that you can grab the entir
 
 <p>
 <center>
-		<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+		<form style='padding: 0px;' action="https://www.paypal.com/cgi-bin/webscr" method="post">
 				<input type="hidden" name="cmd" value="_s-xclick">
 				<input type="hidden" name="hosted_button_id" value="8563T8FQ5H58C">
 				<input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal — The safer, easier way to pay online.">
@@ -76,7 +78,7 @@ Universal Mailer is open source software. This means that you can grab the entir
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Universal Mailer maintained by <a href="https://github.com/UniversalMailer">UniversalMailer</a></p>
+        <p class="copyright">Universal Mailer website maintained by <a href="https://github.com/UniversalMailer">UniversalMailer</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
