added binary for Mavericks version

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ Universal Mailer is open source software. This means that you can grab the entir
 
 <p>If you don't want to grab the source code and compile yourself the plugin, here is the latest version of it. There's also a link for the previous version, use whatever fits your needs.</p>
 
+<p><center><a href="zips/UniversalMailer-v2_0.zip">Download version 2.0 (works only on Mavericks)</a></center></p>
+
 <p><center><a href="zips/UniversalMailer-v1_5_4.zip">Download version 1.5.4 (preferred for Mountain Lion)</a></center></p>
 
 <p><center><a href="zips/UniversalMailer-v1_4.zip">Download version 1.4 (preferred for Lion and Snow Leopard)</a></center></p>
