--- a/download.html
+++ b/download.html
@@ -5,14 +5,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
 	<link href="css/universalmailer.css" rel="stylesheet" media="screen">
+	<link href="css/download.css" rel="stylesheet" media="screen">
  </head>
 
  <body>
   <div class="container">
 			<div class="header">
 					<ul class="nav nav-pills pull-right">
-							<li class="active"><a href="#">Home</a></li>
-							<li><a href="download.html">Downloads</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li class="active"><a href="#">Downloads</a></li>
 							<li><a href="usage.html">Installation & Usage</a></li>
 							<li><a href="faq.html">FAQ</a></li>
 					</ul>
@@ -22,12 +23,27 @@
 
 			<div class="jumbotron">
 					<img src="images/logo.png" alt="logo" class="umlogo">
-					<h1>Universal Mailer</h1>
-					<h2>The missing plugin for Mail.app</h2>
-					<p>Tired of setting over and over the font of your emails? Annoyed by those ATT0001.htm
-					   files that pollutes your emails? Frustrated by seeing your emails messed up with Exchange
-						 recipients?</p>
-					<p><a class="btn btn-lg btn-success dld-btn" href="#">Download Universal Mailer now!</a></p>
+					<h1>Download page</h1>
+					<h2>Choose a version that fits your Mac</h2>
+					<p><a id="mavericks" class="btn btn-lg btn-success dld-btn" href="zips/UniversalMailer-v2_0_1.zip">
+							Universal Mailer 2.0 for Mavericks</a>
+					<p class="downloadsize">Download size: 310kB</p>
+					</p>
+					<h3>Older versions</h3>
+					<div class="row">
+							<span class="col-md-6">
+								<p><a class="btn btn-md btn-primary dld-btn" href="zips/UniversalMailer-v1_5_4.zip">
+										Universal Mailer 1.5.4 for Mountain Lion</a>
+								<p class="downloadsize">Download size: 333kB</p>
+								</p>
+							</span>
+							<span class="col-md-6">
+								<p><a class="btn btn-md btn-primary dld-btn" href="zips/UniversalMailer-v1_4.zip">
+										Universal Mailer 1.4 for Snow Leopard and Lion</a>
+								<p class="downloadsize">Download size: 330kB</p>
+								</p>
+						</span>
+					</div>
 					<p class="donation">Want to contribute to the project? Make a donation!</p>
 					<center>
 							<form style="padding: 0px;" action="https://www.paypal.com/cgi-bin/webscr" method="post">
