added link to download page into index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					<p>Tired of setting over and over the font of your emails? Annoyed by those ATT0001.htm
 					   files that pollutes your emails? Frustrated by seeing your emails messed up with Exchange
 						 recipients?</p>
-					<p><a class="btn btn-lg btn-success dld-btn" href="#">Download Universal Mailer now!</a></p>
+					<p><a class="btn btn-lg btn-success dld-btn" href="download.html">Download Universal Mailer now!</a></p>
 					<p class="donation">Want to contribute to the project? Make a donation!</p>
 					<center>
 							<form style="padding: 0px;" action="https://www.paypal.com/cgi-bin/webscr" method="post">
