added email address to faq

--- a/faq.html
+++ b/faq.html
@@ -135,6 +135,12 @@
 					Well, that's ok :) To remove it just delete UniversalMailer.mailbundle from
 				 	~/Library/Mail/Bundles and restart Mail.app. That's it, no other leftover or something.
 					</p>
+
+					<h3>I tried everything here but I'm still in troubles!</h3>
+					<p>
+					If nothing here seems to help, you can send an email at universal.mailer.noware AT gmail.com,
+					you'll get support as soon as possible!
+					</p>
 			</div>
 
 			<div id="footer">
