updated faq section for sudo lecture

--- a/faq.html
+++ b/faq.html
@@ -39,9 +39,12 @@
 					</p>
 					<p>
 					If the plugin is not installed you can run a few commands from Terminal.app (you can find
-					it under /Applications/Utilities) to ensure everything is correctly setup. Some of those
-					commands might ask you for a password: enter your login password and hit the enter key
-					(there won't be any echo to the screen when you type the password):
+					it under /Applications/Utilities) to ensure that everything is correctly set up. Some of those
+					commands might ask you for a password: enter your login password followed by the enter key.
+					Please note that there won't be any echo to the screen when you type the password and, if
+					you never used 'sudo' before, the system will warn you about its usage: it's all ok, the
+					commands listed here won't do anything harmful to your computer and you can safely enter
+					the password!
 					</p>
 					<code class="prettyprint">
 							&gt; defaults write com.apple.mail EnableBundles -bool YES<br/>
