removed empty space in code section

--- a/faq.html
+++ b/faq.html
@@ -46,8 +46,7 @@
 					commands listed here won't do anything harmful to your computer and you can safely enter
 					the password!
 					</p>
-					<code class="prettyprint">
-							&gt; defaults write com.apple.mail EnableBundles -bool YES<br/>
+					<code class="prettyprint">&gt; defaults write com.apple.mail EnableBundles -bool YES<br/>
 							&gt; defaults write com.apple.mail BundleCompatibilityVersion -int 3<br/>
 							&gt; sudo defaults write com.apple.mail EnableBundles -bool YES<br/>
 							&gt; sudo defaults write com.apple.mail BundleCompatibilityVersion -int 3
