corrected uninstall instructions

--- a/faq.html
+++ b/faq.html
@@ -135,7 +135,8 @@
 					Are you sure? Are you really sure? No, really, you want to remove the plugin?</br>
 					YES<br/>
 					Well, that's ok :) To remove it just delete UniversalMailer.mailbundle from
-				 	~/Library/Mail/Bundles and restart Mail.app. That's it, no other leftover or something.
+				 	~/Library/Mail/Bundles or /Library/Mail/Bundles (it depends on your configuration
+				  where you'll find the plugin bundle) and restart Mail.app. That's it, no other leftover or something.
 					</p>
 
 					<h3>I tried everything here but I'm still in troubles!</h3>
