changed faq as per issue #36

--- a/faq.html
+++ b/faq.html
@@ -122,7 +122,11 @@
 							'Unidentified Developer'</h3>
 					<p>
 					This plugin is not signed with an Apple Developer Certificate, and this is the reason
-					you get this error. You can temporary (or permanently, if you wish to do so) disable 
+					you get this error. You can override this problem by right-clicking the installation
+					file and select 'Open'. This will produce a warning also, but you can continue with
+					the installation.
+					Another method, which is not advised since it might expose to security risks, is to
+					temporary (or permanently, if you wish to do so) disable 
 					this extra security check to install the plugin, here's how: go to System Preferences,
 					select Security &amp; Privacy and select 'Anywhere' in the 'Allow apps downloaded from'.
 					This operation might require you to click on the yellow on lock on the bottom left of
