updated faq for font sizes

--- a/faq.html
+++ b/faq.html
@@ -88,7 +88,8 @@
 					<p>
 					It largely depends on your personal tastes and also what you mean by 'readable', however
 					I suggest to start with a Helvetica fonts with size 14, and I would specify using points
-					instead of pixels.
+					instead of pixels. On newer versions of OS X (i.e. Mavericks and above) it seems to be
+					better to use pixels instead of points because of a change Apple made on Mail.app.
 					</p>
 
 					<h3>When I send an email my signature doesn't match the font I specified in Universal
