fixed sentence grammar in faq

--- a/faq.html
+++ b/faq.html
@@ -42,7 +42,7 @@
 					it under /Applications/Utilities) to ensure that everything is correctly set up. Some of those
 					commands might ask you for a password: enter your login password followed by the enter key.
 					Please note that there won't be any echo to the screen when you type the password and, if
-					you never used 'sudo' before, the system will warn you about its usage: it's all ok, the
+					you never have used 'sudo' before, the system will warn you about its usage: it's all ok, the
 					commands listed here won't do anything harmful to your computer and you can safely enter
 					the password!
 					</p>
