update for El Capitan compatibility

--- a/usage.html
+++ b/usage.html
@@ -29,7 +29,7 @@
 					<p>
 					To install the plugin download and run the installation package from the Download page.
 					The plugin is compatible with OS X Snow Leopard (latest update), OS X Lion, OS X Mountain
-					Lion and OS X Mavericks. Please note that you should choose the version to download based
+					Lion, OS X Mavericks, OS X Yosemite and OS X El Capitan. Please note that you should choose the version to download based
 					on your operating system: if you download a different version the plugin may not work!<br/>
 					</p>
 
