--- a/download.html
+++ b/download.html
@@ -26,7 +26,7 @@
 					<h1>Download page</h1>
 					<h2>Choose a version that fits your Mac</h2>
 					<p><a id="mavericks" class="btn btn-lg btn-success dld-btn" href="zips/UniversalMailer-v2_1_6.zip">
-							Universal Mailer 2.1.6 for Mavericks and Yosemite</a>
+							Universal Mailer 2.1.6 for Mavericks, Yosemite and El Capitan</a>
 					<p class="downloadsize">Download size: 314kB</p>
 					</p>
 					<h3>Older versions</h3>
