--- a/faq.html
+++ b/faq.html
@@ -152,7 +152,7 @@
 			</div>
 
 			<div id="footer">
-					<div class="pull-right">Copyright &copy; 2014 noware</p>
+					<div class="pull-right">Copyright &copy; 2014-2015 noware</p>
 			</div>
 	</div>
 
