--- a/download.html
+++ b/download.html
@@ -14,6 +14,7 @@
 					<ul class="nav nav-pills pull-right">
 							<li><a href="index.html">Home</a></li>
 							<li class="active"><a href="#">Downloads</a></li>
+							<li><a href="whatsnew.html">What's new</a></li>
 							<li><a href="usage.html">Installation & Usage</a></li>
 							<li><a href="faq.html">FAQ</a></li>
 					</ul>
@@ -26,20 +27,26 @@
 					<h1>Download page</h1>
 					<h2>Choose a version that fits your Mac</h2>
 					<p><a id="mavericks" class="btn btn-lg btn-success dld-btn" href="zips/UniversalMailer-v2_1_6.zip">
-							Universal Mailer 2.1.6 for Mavericks, Yosemite and El Capitan</a>
+							Universal Mailer 3.0 for El Capitan</a>
 					<p class="downloadsize">Download size: 314kB</p>
 					</p>
 					<h3>Older versions</h3>
 					<div class="row">
-							<span class="col-md-6">
+							<span class="col-md-4">
+									<p><a class="btn btn-md btn-primary dld-btn" href="zips/UniversalMailer-v2_1_6.zip">
+											v2.1.6 for Mavericks, Yosemite and El Capitan</a>
+									<p class="downloadsize">Download size: 314kB</p>
+									</p>
+							</span>
+							<span class="col-md-4">
 								<p><a class="btn btn-md btn-primary dld-btn" href="zips/UniversalMailer-v1_5_4.zip">
-										Universal Mailer 1.5.4 for Mountain Lion</a>
+										v1.5.4 for Mountain Lion</a>
 								<p class="downloadsize">Download size: 333kB</p>
 								</p>
 							</span>
-							<span class="col-md-6">
+							<span class="col-md-4">
 								<p><a class="btn btn-md btn-primary dld-btn" href="zips/UniversalMailer-v1_4.zip">
-										Universal Mailer 1.4 for Snow Leopard and Lion</a>
+										v1.4 for Snow Leopard and Lion</a>
 								<p class="downloadsize">Download size: 330kB</p>
 								</p>
 						</span>
@@ -55,7 +62,7 @@
 			</div>
 
 			<div id="footer">
-					<div class="pull-right">Copyright &copy; 2014-2015 noware</p>
+					<div class="pull-right">Copyright &copy; 2016 noware</p>
 			</div>
 	</div>
 
