--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 					<ul class="nav nav-pills pull-right">
 							<li class="active"><a href="#">Home</a></li>
 							<li><a href="download.html">Downloads</a></li>
+							<li><a href="whatsnew.html">What's new</a></li>
 							<li><a href="usage.html">Installation & Usage</a></li>
 							<li><a href="faq.html">FAQ</a></li>
 					</ul>
@@ -39,7 +40,7 @@
 			</div>
 
 			<div id="footer">
-					<div class="pull-right">Copyright &copy; 2014-2015 noware</p>
+					<div class="pull-right">Copyright &copy; 2016 noware</p>
 			</div>
 	</div>
 
