--- a/usage.html
+++ b/usage.html
@@ -14,6 +14,7 @@
 					<ul class="nav nav-pills pull-right">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="download.html">Downloads</a></li>
+							<li><a href="whatsnew.html">What's new</a></li>
 							<li class="active"><a href="#">Installation & Usage</a></li>
 							<li><a href="faq.html">FAQ</a></li>
 					</ul>
@@ -28,8 +29,13 @@
 					<h3>Installation</h3>
 					<p>
 					To install the plugin download and run the installation package from the Download page.
-					The plugin is compatible with OS X Snow Leopard (latest update), OS X Lion, OS X Mountain
-					Lion, OS X Mavericks, OS X Yosemite and OS X El Capitan. Please note that you should choose the version to download based
+					The latest version of the plugin (v3.0 and up) is comptabile with OS X El Capitan only.
+					<br/><br/>
+					The previous version of the plugin (up to v2.1.6) is compatible with OS X Snow Leopard
+					(latest update), OS X Lion, OS X Mountain Lion, OS X Mavericks, OS X Yosemite and OS X
+					El Capitan.
+					<br/><br/>
+					Please note that you should choose the version to download based
 					on your operating system: if you download a different version the plugin may not work!<br/>
 					</p>
 
@@ -40,22 +46,30 @@
 					annoying ATT00001.htm attachments any more!
 					</p>
 					<p>
-					If you end up with emails that are not showing the font you'd expected, be sure that your
-					client is instructed to send rich text emails: plain text emails are not supported by the
-					plugin.
+					Starting from version 3.0 the HTML signature is not strictly needed, since the plugin
+					can automatically choose to send riched text email for you.
 					</p>
 					<p>
-					The best way to ensure that every sent emails is rich (i.e. it has a plain text version
+					For previous versions however the best way to ensure that every sent emails is rich
+					(i.e. it has a plain text version
 					together with an 'enriched' HTML version) is to include an HTML signature. HTML signatures
 					can be anything you want, from simple text to complex HTML blocks.
 					To learn more about HTML and signatures you can refer to the following website, it has
 					complete and detailed instructions on how to include one into your client:
-					<a href="http://mydesignpad.com/create-a-html-email-signature-for-mac-os-x-mountain-lion-10-8/" alt="html_signature">HTML signatures in Mail.app</a>
+					<a href="http://mydesignpad.com/create-a-html-email-signature-for-mac-os-x-mountain-lion-10-8/" alt="html_signature">HTML signatures in Mail.app</a>.
 					</p>
+
+					<h3>Version 3 or Version 2?</h3>
+					<p>
+					It might be obvious but you should choose version 3 whenever possible. This means
+					that if you have OS X El Capitan you should use this version. Since older versions
+					of OS X are not supported there's still version 2 available for download.
+					</p>
+
 			</div>
 
 			<div id="footer">
-					<div class="pull-right">Copyright &copy; 2014-2015 noware</p>
+					<div class="pull-right">Copyright &copy; 2016 noware</p>
 			</div>
 	</div>
 
