fixed v3b1 zip size

--- a/download.html
+++ b/download.html
@@ -28,7 +28,7 @@
 					<h2>Choose a version that fits your Mac</h2>
 					<p><a onclick="track_download('download','v3b1', 'v3b1', 'v3b1');" id="mavericks" class="btn btn-lg btn-success dld-btn" href="zips/UniversalMailer-v3b1.zip">
 							Universal Mailer 3.0 for El Capitan</a>
-					<p class="downloadsize">Download size: 314kB</p>
+					<p class="downloadsize">Download size: 1,7MB</p>
 					</p>
 					<h3>Older versions</h3>
 					<div class="row">
