added push to ga

--- a/download.html
+++ b/download.html
@@ -45,7 +45,7 @@
 								</p>
 							</span>
 							<span class="col-md-4">
-								<p><a onclick="ga('send', 'event', 'download', 'v14', 'v14', 1);" class="btn btn-md btn-primary dld-btn" href="zips/UniversalMailer-v1_4.zip">
+								<p><a onclick="ga.push(['_trackEvent', 'Download', 'ZIP', 'v14']);" class="btn btn-md btn-primary dld-btn" href="zips/UniversalMailer-v1_4.zip">
 										v1.4 for Snow Leopard and Lion</a>
 								<p class="downloadsize">Download size: 330kB</p>
 								</p>
