--- a/download.html
+++ b/download.html
@@ -26,9 +26,9 @@
 					<img src="images/logo.png" alt="logo" class="umlogo">
 					<h1>Download page</h1>
 					<h2>Choose a version that fits your Mac</h2>
-					<p><a onclick="ga.push(['_trackEvent', 'Download', 'ZIP', 'v3b1']);" id="mavericks" class="btn btn-lg btn-success dld-btn" href="zips/UniversalMailer-v3b1.zip">
+					<p><a onclick="ga.push(['_trackEvent', 'Download', 'ZIP', 'v3b2']);" id="mavericks" class="btn btn-lg btn-success dld-btn" href="zips/UniversalMailer-v3b2.zip">
 							Universal Mailer 3.0 for El Capitan</a>
-					<p class="downloadsize">Download size: 1,7MB</p>
+					<p class="downloadsize">Download size: 218kB</p>
 					</p>
 					<h3>Older versions</h3>
 					<div class="row">
