--- a/download.html
+++ b/download.html
@@ -26,26 +26,26 @@
 					<img src="images/logo.png" alt="logo" class="umlogo">
 					<h1>Download page</h1>
 					<h2>Choose a version that fits your Mac</h2>
-					<p><a onclick="ga.push(['_trackEvent', 'Download', 'ZIP', 'v3b6']);" id="mavericks" class="btn btn-lg btn-success dld-btn" href="zips/UniversalMailer-v3b6.zip">
+					<p><a onclick="ga('send', 'event', 'pkg', 'download', 'v3b6');" id="mavericks" class="btn btn-lg btn-success dld-btn" href="zips/UniversalMailer-v3b6.zip">
 							Universal Mailer 3.0 for El Capitan</a>
 					<p class="downloadsize">Download size: 1.1MB</p>
 					</p>
 					<h3>Older versions</h3>
 					<div class="row">
 							<span class="col-md-4">
-									<p><a onclick="ga.push(['_trackEvent', 'Download', 'ZIP', 'v216']);" class="btn btn-md btn-primary dld-btn" href="zips/UniversalMailer-v2_1_6.zip">
+									<p><a onclick="ga('send', 'event', 'pkg', 'download', 'v216');" class="btn btn-md btn-primary dld-btn" href="zips/UniversalMailer-v2_1_6.zip">
 											v2.1.6 for Mavericks, Yosemite and El Capitan</a>
 									<p class="downloadsize">Download size: 314kB</p>
 									</p>
 							</span>
 							<span class="col-md-4">
-								<p><a onclick="ga.push(['_trackEvent', 'Download', 'ZIP', 'v154']);" class="btn btn-md btn-primary dld-btn" href="zips/UniversalMailer-v1_5_4.zip">
+								<p><a onclick="ga('send', 'event', 'pkg', 'download', 'v154');" class="btn btn-md btn-primary dld-btn" href="zips/UniversalMailer-v1_5_4.zip">
 										v1.5.4 for Mountain Lion</a>
 								<p class="downloadsize">Download size: 333kB</p>
 								</p>
 							</span>
 							<span class="col-md-4">
-								<p><a onclick="ga.push(['_trackEvent', 'Download', 'ZIP', 'v14']);" class="btn btn-md btn-primary dld-btn" href="zips/UniversalMailer-v1_4.zip">
+								<p><a onclick="ga('send', 'event', 'pkg', 'download', 'v14');" class="btn btn-md btn-primary dld-btn" href="zips/UniversalMailer-v1_4.zip">
 										v1.4 for Snow Leopard and Lion</a>
 								<p class="downloadsize">Download size: 330kB</p>
 								</p>
@@ -68,14 +68,14 @@
 
   <script src="http://code.jquery.com/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
-	<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-							(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-					m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-              ga('create', 'UA-41621933-1', 'universalmailer.github.io');
-                ga('send', 'pageview');
-	</script>
+    ga('create', 'UA-41621933-1', 'auto');
+    ga('send', 'pageview');
+  </script>
  </body>
 </html>
