fixed typo in usage.html

--- a/usage.html
+++ b/usage.html
@@ -29,7 +29,7 @@
 					<h3>Installation</h3>
 					<p>
 					To install the plugin download and run the installation package from the Download page.
-					The latest version of the plugin (v3.0 and up) is comptabile with OS X El Capitan only.
+					The latest version of the plugin (v3.0 and up) is compatible with OS X El Capitan only.
 					<br/><br/>
 					The previous version of the plugin (up to v2.1.6) is compatible with OS X Snow Leopard
 					(latest update), OS X Lion, OS X Mountain Lion, OS X Mavericks, OS X Yosemite and OS X
