--- a/download.html
+++ b/download.html
@@ -26,8 +26,8 @@
 					<img src="images/logo.png" alt="logo" class="umlogo">
 					<h1>Download page</h1>
 					<h2>Choose a version that fits your Mac</h2>
-					<p><a onclick="ga('send', 'event', 'pkg', 'download', 'v3b18');" id="mavericks" class="btn btn-lg btn-success dld-btn" href="zips/UniversalMailer-v3b18.zip">
-							Universal Mailer 3.0 for El Capitan / macOS Sierra</a>
+					<p><a onclick="ga('send', 'event', 'pkg', 'download', 'v3b19');" id="mavericks" class="btn btn-lg btn-success dld-btn" href="zips/UniversalMailer-v3b19.zip">
+							Universal Mailer 3.0 for El Capitan / macOS Sierra / macOS High Sierra (experimental)</a>
 					<p class="downloadsize">Download size: 1.2MB</p>
 					</p>
 					<h3>Older versions</h3>
